<resources>
    <string name="app_name">Material</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floatingactionbutton">FloatingActionButton</string>
    <string name="img_loading">Загрузка картинки</string>
    <string name="ThemeId">Theme Id</string>
    <string name="theme">Тема</string>
    <string name="screen_1">На экран 1</string>
    <string name="screen_2">На экран 2</string>
    <string name="chips">ChipGroup</string>
    <string name="settings_theme_moon">Moon</string>
    <string name="settings_theme_space">Space</string>
    <string name="settings_theme_default">Default</string>
    <string name="selection_theme">Выбор темы</string>
    <string name="default_theme">Default</string>
    <string name="moon_theme">Moon</string>
    <string name="mars_theme">Mars</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="weather">Weather</string>
    <string name="two_yesterday">Позавчерашнее</string>
    <string name="yesterday">Вчерашнее</string>
    <string name="today">Сегодняшнее</string>
    <string name="blankAPIKey">You need API key</string>
    <string name="undefError">Unidentified error</string>
    <string name="dateFormat">yyyy-MM-dd</string>
    <string name="dateFormatYear">yyyy</string>
    <string name="dateFormatMonth">MM</string>
    <string name="dateFormatDay">dd</string>
    <string name="emptyLink">Link is empty</string>
    <string name="Settings">Настройки</string>
    <string name="Earth">Земля</string>
    <string name="Planets">Планеты</string>
    <string name="TPOD">Картинка дня</string>
    <string name="Mars">Марс</string>
    <string name="next">Следующее</string>
    <string name="prev">Предыдущее</string>
    <string name="Moon">Луна</string>
    <string name="fab">FAB</string>
    <string name="itemImage">Изображение %1$d из %2$d</string>
    <string name="itemImageDate">Дата снимка: %1$s</string>
    <string name="enter_text">Введите слова для поиска</string>
    <string name="notes">Заметки</string>
    <string name="buttonNext"><![CDATA[>>]]></string>
    <string name="buttonPrev"><![CDATA[<<]]></string>
    <string name="share">Поделиться</string>
    <string name="button">Кнопка-заглушка</string>
    <string name="tryText">Попытка получить фото от: %1$s</string>
    <string name="photo_from_mars">Photo from Mars</string>
    <string name="swipe_indicator_active">swipe_indicator_active</string>
    <string name="swipe_indicator_passive">swipe_indicator_passive</string>
</resources>
