<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.settings.SettingsFragment">

        <TextView
            android:id="@+id/text_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small_XX"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/selection_theme"
            android:textAlignment="center"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/theme_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/moon_theme_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moon_theme" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/mars_theme_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mars_theme" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/default_theme_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_theme" />
        </RadioGroup>

    </LinearLayout>