<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/marsContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewMars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/photo_from_mars"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_mars" />

        <TextView
            android:id="@+id/countMarsImage"
            style="@style/itemImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Всегго" />

        <TextView
            android:id="@+id/dateMarsImage"
            style="@style/itemImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countMarsImage"
            tools:text="Дата фото:" />

        <Button
            android:id="@+id/buttonPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonPrev"
            app:layout_constraintEnd_toStartOf="@+id/buttonNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateMarsImage" />


        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonPrev"
            app:layout_constraintTop_toBottomOf="@+id/dateMarsImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:contentDescription="@string/swipe_indicator_active"
            android:src="@drawable/swipe_indicator_active" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:contentDescription="@string/swipe_indicator_passive"
            android:src="@drawable/swipe_indicator_passive" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/transparent_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@android:color/white"
        android:clickable="false"
        tools:background="@android:color/transparent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/option_one_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:orientation="horizontal"
            android:paddingEnd="32dp"
            android:paddingBottom="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/share"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_share" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/option_two_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:orientation="horizontal"
            android:paddingEnd="32dp"
            android:paddingBottom="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/button"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                app:srcCompat="@drawable/ic_previous" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabMars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="5dp" />

        <ImageView
            android:id="@+id/plus_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:elevation="10dp"
            app:srcCompat="@drawable/ic_share" />
    </FrameLayout>


</FrameLayout>