<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/colorPrimary"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:backgroundTint="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:id="@+id/image_view_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup">

                <geekbarains.material.util.EquilateralImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/photo_of_the_day_stub"
                    app:srcCompat="@drawable/ic_no_photo_vector" />

                <WebView
                    android:id="@+id/webView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />
            </FrameLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="?attr/colorPrimary"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="chipGroup"
                app:layout_constraintBottom_toTopOf="@+id/header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_two_yesterday"
                    style="@style/ChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="two_yesterday"
                    android:text="@string/two_yesterday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_yesterday"
                    style="@style/ChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="yesterday"
                    android:text="@string/yesterday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_today"
                    style="@style/ChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:tag="today"
                    android:text="@string/today" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/header"
                style="@style/Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup"/>

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/motionLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:backgroundTint="?attr/colorPrimary"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layoutDescription="@xml/fragment_main_scene"
                app:layout_constraintBottom_toBottomOf="@+id/header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/header">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/wiki_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@+id/input_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/input_layout"
                    app:srcCompat="@drawable/ic_wikipedia" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_wiki"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:endIconCheckable="true"
                    app:endIconDrawable="@drawable/ic_search"
                    app:endIconMode="custom"
                    app:helperText="@string/wiki_helper_text"
                    app:layout_constraintEnd_toStartOf="@+id/wiki_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.motion.widget.MotionLayout>

            <TextView
                android:id="@+id/description"
                style="@style/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/fab"
        android:src="@drawable/ic_comment_24"
        app:layout_anchor="@id/main_appbar"
        app:layout_anchorGravity="bottom|right|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>